// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer blocks OnDemandHeading should render correctly - dark mode 1`] = `
.c0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #F2F2F2;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c1 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 2.5rem 0;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<h1
  class="c0"
>
  <span
    role="text"
  >
    <span
      class="c1"
    >
      Dunia Pagi Ini
    </span>
    <span
      class="c2"
    >
      , 
    </span>
    <span
      class="c3"
    >
      27 April 2020
    </span>
  </span>
</h1>
`;

exports[`AudioPlayer blocks OnDemandHeading should render correctly 1`] = `
.c0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c1 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 2.5rem 0;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<h1
  class="c0"
>
  <span
    role="text"
  >
    <span
      class="c1"
    >
      Dunia Pagi Ini
    </span>
    <span
      class="c2"
    >
      , 
    </span>
    <span
      class="c3"
    >
      27 April 2020
    </span>
  </span>
</h1>
`;
